--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <model-viewer
-      src="https://raw.githubusercontent.com/mjtoro81/TiendaPiramideBuena/main/tienda-piramide-cuadrangular.glb"
+      src="tienda-piramide-cuadrangular.glb"
       alt="Tienda de campaña"
       ar
       ar-modes="scene-viewer quick-look webxr"
